kustomizations/media/yt-po-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-ytdl-pot
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ytdl-pot
  template:
    metadata:
      labels:
        app: ytdl-pot
    spec:
      hostNetwork: true
      containers:
      - name: generator
        image: brainicism/bgutil-ytdlp-pot-provider:latest
        ports:
        - containerPort: 4416
---
apiVersion: v1
kind: Service
metadata:
  name: ytdl-pot
  namespace: media
spec:
  selector:
    app: ytdl-pot
  ports:
    - protocol: TCP
      port: 4416
      targetPort: 4416
