kustomizations/media/bliss.yaml
apiVersion: v1
kind: Service
metadata:
  name: bliss
  namespace: media
spec:
  selector:
    app: bliss
  ports:
    - name: ui
      protocol: TCP
      port: 3220
      targetPort: 3220
    - name: api
      protocol: TCP
      port: 3221
      targetPort: 3221
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bliss
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bliss
  template:
    metadata:
      labels:
        app: bliss
    spec:
      containers:
      - name: bliss
        image: elstensoftware/bliss:latest
        ports:
        - containerPort: 3220
        - containerPort: 3221
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: music
          mountPath: /music
        - name: config
          mountPath: /config
      nodeSelector:
        kubernetes.io/hostname: caturra
      volumes:
      - name: music
        hostPath:
          path: /mnt/music
          type: DirectoryOrCreate
      - name: config
        hostPath:
          path: /mnt/bliss
          type: DirectoryOrCreate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bliss
  namespace: media
spec:
  rules:
  - host: bliss.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bliss
              port:
                number: 3220
