kustomizations/media/mp3-tag.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mp3tag-web
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mp3tag-web
  template:
    metadata:
      labels:
        app: mp3tag-web
    spec:
      containers:
      - name: mp3tag
        image: romancin/mp3tag-web:latest # O jlesage/picard si prefieres MusicBrainz
        ports:
        - containerPort: 5800
        volumeMounts:
        - name: music
          mountPath: /storage
      nodeSelector:
        kubernetes.io/hostname: caturra
      volumes:
      - name: music
        hostPath:
          path: /mnt/music
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: mp3tag-web
  namespace: media
spec:
  ports:
  - port: 5800
    targetPort: 5800
  selector:
    app: mp3tag-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mp3tag-web
spec:
  rules:
  - host: mp3tag.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mp3tag-web
              port:
                number: 5800
