kustomizations/media/openwa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwa-api
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwa-api
  template:
    metadata:
      labels:
        app: openwa-api
    spec:
      automountServiceAccountToken: false
      containers:
      - name: openwa
        image: ghcr.io/rmyndharis/openwa:latest
        ports:
        - containerPort: 2785
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          runAsNonRoot: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: true
          capabilities:
            drop:
            - ALL
            add:
            - CHOWN
            - DAC_OVERRIDE
            - FOWNER
            - SETUID
            - SETGID
        resources:
          limits:
            cpu: "1"
            memory: 1.5Gi
          requests:
            cpu: 500m
            memory: 768Mi
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
        - name: openwa
          mountPath: /app/data
        - name: openwa-tmp
          mountPath: /tmp
      nodeSelector:
        kubernetes.io/hostname: castillo
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: openwa-tmp
        emptyDir:
          medium: Memory
      - name: openwa
        hostPath:
          path: /mnt/openwa
---
apiVersion: v1
kind: Service
metadata:
  name: openwa
  namespace: media
spec:
  ports:
    - port: 2785
      targetPort: 2785
      protocol: TCP
  selector:
    app: openwa-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwa
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "traefik"
  rules:
    - host: openwa.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwa
                port:
                  number: 2785
